--- a/index.html
+++ b/index.html
@@ -845,10 +845,14 @@
 <footer id="social">
     <section id="contact"> 
   <h2>Contact Us</h2> <br>
-  <p>Address: Kafr El-Shaikh,Oism Kafr El-Seikh</p>
-  <p>Phone: +20 155 551 8144</p>
-  <p>Email: info@aromacafe.com</p>
-</section>
+  <p>📍 Address:Chillout Gaz Station,<br>
+        Kafr El Sheikh, Egypt</p>
+  <p>📞 For Reservations:+20 155 551 8144</p>
+  <p>
+🕰️ Working Hours:
+Join us for a delightful experience <br>
+from 9:00 AM till 2:00 AM</p>
+<br> <br>
 
   <p>© 2026 Aroma Cafe. All Rights Reserved.</p>
   <div class="socials">
@@ -856,6 +860,10 @@
     <a href="https://www.facebook.com/share/1VaVCUZUgd/" target="_blank">Facebook</a> |
    
   </div>
+
+</section>
+
+
 </footer>
 
 </body>
